fixed timer overflow

--- a/styles.css
+++ b/styles.css
@@ -48,144 +48,146 @@ body {
 
 }
 
-#timer  {
-  transform: translate(-50%, 0%);
-  mask-image: linear-gradient(rgba(255,0,0,0), rgba(0,0,0,1)10% 90%, rgba(0,255,0,0));
-  left: 65vw;
-  position: absolute;
+#timer {
+    transform: translate(-50%, 0%);
+    mask-image: linear-gradient(rgba(255, 0, 0, 0), rgba(0, 0, 0, 1) 10% 90%, rgba(0, 255, 0, 0));
+    left: 65vw;
+    position: absolute;
 
-  width: 150px;
-  height: 100px;
-  padding: 10px;
-  
-  font-size: 5rem;
-  word-wrap: break-word;
+    width: 175px;
+    height: 100px;
+    padding: 10px;
+
+    font-size: 5rem;
+    word-wrap: break-word;
 }
 
-#mines  {
-  mask-image: linear-gradient(rgba(255,0,0,0), rgba(0,0,0,1)10% 90%, rgba(0,255,0,0));
-  left: 35vw;
-  transform: translate(-50%, 0%);
-  position: absolute;
+#mines {
+    mask-image: linear-gradient(rgba(255, 0, 0, 0), rgba(0, 0, 0, 1) 10% 90%, rgba(0, 255, 0, 0));
+    left: 35vw;
+    transform: translate(-50%, 0%);
+    position: absolute;
 
-  width: 100px;
-  height: 90px;
-  padding: 10px;
-  
-  font-size: 5rem;
-  word-wrap: break-word;
+    width: 100px;
+    height: 90px;
+    padding: 10px;
+
+    font-size: 5rem;
+    word-wrap: break-word;
 }
 
 .digit {
-  position:absolute;
-  width: 50px;
-  transition: transform 0.3s ease;
+    position: absolute;
+    width: 50px;
+    transition: transform 0.3s ease;
 }
 
 
 #menu {
-  display: none;
-  position: absolute;
-  width: 100vw;
-  height: 100vh;
-  background-color: rgba(0, 0, 0, 0.5);
-  backdrop-filter: none;
-  z-index: 10;
-  transition: backdrop-filter 2s ease;
-  -webkit-transition: backdrop-filter 2s ease;
-  -moz-transition: backdrop-filter 2s ease;
-  -ms-transition: backdrop-filter 2s ease;
-  -o-transition: backdrop-filter 2s ease;
+    display: none;
+    position: absolute;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: none;
+    z-index: 10;
+    transition: backdrop-filter 2s ease;
+    -webkit-transition: backdrop-filter 2s ease;
+    -moz-transition: backdrop-filter 2s ease;
+    -ms-transition: backdrop-filter 2s ease;
+    -o-transition: backdrop-filter 2s ease;
 }
 
-#menu.toggled{
-  display: block;
-  backdrop-filter: blur(10px);
+#menu.toggled {
+    display: block;
+    backdrop-filter: blur(10px);
 }
 
 #menu-title, #feedback-text {
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  font-size: 3rem;
-  font-family: "Lexend Deca","Helvetica Neue",Helvetica,Arial,sans-serif;
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 3rem;
+    font-family: "Lexend Deca", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-#menu-title{
-  top: 10%;
+#menu-title {
+    top: 10%;
 }
-#feedback-text{
-  top: 20%
+
+#feedback-text {
+    top: 20%
 }
 
 #menu-buttons {
-  width: 40%;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  align-items: center;
+    width: 40%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
 }
 
 #startButtonContainer {
-  width: 100px;
-  height: 100px;
+    width: 100px;
+    height: 100px;
 
-  border-color: #FFFFFF;
-  border-width: 2px;
-  border-style: solid;
-  border-radius: 15px;
+    border-color: #FFFFFF;
+    border-width: 2px;
+    border-style: solid;
+    border-radius: 15px;
 }
 
 
 #startButtonBack {
-  width: 100px;
-  height: 100px;
+    width: 100px;
+    height: 100px;
 
-  background: #DDDDDD;
+    background: #DDDDDD;
 
-  border-radius: 12px;
-  border: none;
+    border-radius: 12px;
+    border: none;
 
-  padding: 0;
-  cursor: pointer;
-  outline-offset: 4px;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
 }
 
 #startButtonFront {
-  width: 100px;
-  height: 100px;
+    width: 100px;
+    height: 100px;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 
-  border-radius: 12px;
-  border: none;
-  font-size: 1.5rem;
-  font-family: 'Rubik', sans-serif;
+    border-radius: 12px;
+    border: none;
+    font-size: 1.5rem;
+    font-family: 'Rubik', sans-serif;
 
-  background: #FFFFFF;
-  color: #000011;
+    background: #FFFFFF;
+    color: #000011;
 
-  transform: translateY(-6px);
+    transform: translateY(-6px);
 }
+
 #startButtonBack:active #startButtonFront {
-  transform: translateY(-2px);
+    transform: translateY(-2px);
 
 }
 
 .menuInput {
-  width: 100px;
-  height: 100px;
-  font-size: 1.5rem;
-  text-align: center;
-  font-family: 'Rubik', sans-serif;
-  border: 2px solid #FFFFFF;
-  border-radius: 15px;
-  background: #EEEEEE;
+    width: 100px;
+    height: 100px;
+    font-size: 1.5rem;
+    text-align: center;
+    font-family: 'Rubik', sans-serif;
+    border: 2px solid #FFFFFF;
+    border-radius: 15px;
+    background: #EEEEEE;
 }
